@@ -32,11 +32,13 @@ class DbError extends Error {
 
 function getCollection(collName) {
   return function(db) {
+    logger.debug('Searching for collection ' + collName);
     return new Promise(function(resolve, reject) {
       db.collection(collName, function(err, collection) {
         if (err) {
           reject(err);
         } else {
+          logger.debug('Found collection ' + collName);
           resolve(collection);
         }
       });
@@ -63,6 +65,10 @@ function _validateNoEmptyString(scope, name, value, type) {
 // not be in the whole module scope
 let p_db = MongoClient.connect(config.provide().get('mongourl'));
 
+p_db.then(function() {
+  logger.debug('Successfully connected to database');
+});
+
 p_db.catch(function(reason) {
   logger.error(reason);
   throw reason;
@@ -79,6 +85,7 @@ function generateTokenPromise() {
   return new Promise(function(resolve, reject) {
     // TODO refactor to prevent collisions with tokens in db
     // 24 bytes will generate a 32 character base64 string
+    logger.debug('Generating new token');
     randomBytes(24, function(err, buf) {
       if (err) {
         reject(err);
@@ -92,6 +99,7 @@ function generateTokenPromise() {
 
 function findMatchingTokens(token) {
   return p_collection.then(function(collection) {
+    logger.debug('Searching database for token: ' + token);
     let query = {token: token};
     // This will automatically reject if collection.find() throws an error.
     // No need to manually catch and reject.
@@ -102,6 +110,7 @@ function findMatchingTokens(token) {
 function getDocument(p_cursor) {
   return function() {
     return p_cursor.then(function(cursor) {
+      logger.debug('Retrieving next document from cursor');
       return cursor.next();
     });
   };
@@ -109,6 +118,7 @@ function getDocument(p_cursor) {
 
 function cursorHasExactlyOneDoc(p_cursor) {
   return p_cursor.then(function(cursor) {
+    logger.debug('Checking db only found one result');
     return cursor.count();
   })
   .then(function(count) {
@@ -145,6 +155,7 @@ let createToken = function createToken(user, justification) {
   return generateTokenPromise().then(function(token) {
     let doc = _buildToken(token, user, justification);
     return p_collection.then(function(collection) {
+      logger.debug('Inserting new token into database');
       return collection.insertOne(doc)
         .then(function() {
           return Promise.resolve(doc);
@@ -159,6 +170,8 @@ let createToken = function createToken(user, justification) {
 
 function _updateToken(doc, update) {
   return p_collection.then(function(collection) {
+    logger.debug('Updating token ' + doc.token +
+                 '; update obj ' + JSON.stringify(update));
     return collection.updateOne({token: doc.token}, update).then(function() {
       doc.status = constants.TOKEN_STATUS_REVOKED;
       return doc;
@@ -167,6 +180,7 @@ function _updateToken(doc, update) {
 }
 
 let revokeToken = function revokeToken(user, token, justification) {
+  logger.debug('Revoking ' + token + ' for user ' + user);
   try {
     let fName = 'revokeToken';
     _validateNoEmptyString(fName, 'user', user, 'string');
@@ -206,7 +220,7 @@ let revokeToken = function revokeToken(user, token, justification) {
 
 let listTokens = function listTokens(user) {
   // TODO: what if user not recognised?
-  logger.info('Listing tokens for user', user);
+  logger.debug('Listing tokens for user', user);
   try {
     let functionName = 'listTokens';
     assert(user, `${functionName}: user is not defined`);
@@ -222,6 +236,7 @@ let listTokens = function listTokens(user) {
 };
 
 let checkToken = function checkToken(groups, token) {
+  logger.debug('Checking token ' + token + ' authorises bearer');
   try {
     let fName = 'checkToken';
     _validate(fName, 'groups', groups);
@@ -249,6 +264,8 @@ let checkToken = function checkToken(groups, token) {
 };
 
 let checkUser = function checkUser(groups, user) {
+  logger.debug('Checking that user ' + user + ' is member of all groups ' +
+               JSON.stringify(groups));
   try {
     let fName = 'checkUser';
     _validate(fName, 'groups', groups);
