@@ -43,6 +43,7 @@ if (opts.get('ssl')) {
     key: fs.readFileSync(key),
     cert: fs.readFileSync(cert),
   };
+  logger.info('Running on HTTPS');
   let passphrase = opts.get('sslpassphrase');
   if (passphrase) {
     httpsopts.passphrase = passphrase;
@@ -89,6 +90,8 @@ app.use(function(err, req, res, next) {
     err: 'Internal server error'
   });
 });
+
+logger.debug('All routing and middleware registered');
 
 serv.listen(port);
 logger.info(`npg_sentry started on port ${port}`);
