@@ -1,4 +1,5 @@
 
+ - more debug level logging messages
  - use random db port for tests
  - format for npm deployment
  - split controller setup into module
